sandbox/output
GildedRose.java:55: error: ';' expected
        }
         ^
1 error
